--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,4 +1,5 @@
 {% extends 'accounts/base.html' %}
+{% block navbar %}{% endblock %}
 {% block content %}
 
 <h2>
@@ -14,3 +15,11 @@
 
 </form>
 {% endblock %}
+
+
+
+
+
+
+
+
