--- a/templates/accounts/citizen_dashboard.html
+++ b/templates/accounts/citizen_dashboard.html
@@ -4,7 +4,7 @@
 <h2>Welcome back, {{ citizen.first_name }}!</h2>
 
 <!-- Submit New Complaint Button -->
-<a href="{% url 'submit_task' %}" class="btn btn-primary mb-3">➕ Submit New Complaint</a>
+<a href="{% url 'submit_task' %}" class="btn btn-primary mb-3"> Submit New Complaint</a>
 
 
 
