--- a/templates/accounts/worker_search_result.html
+++ b/templates/accounts/worker_search_result.html
@@ -1,7 +1,7 @@
 {% extends "accounts/base.html" %}
 {% block content %}
 <div class="container mt-4">
-    <h3>🔍 Search Result</h3>
+    <h3> Search Result</h3>
     <hr>
 
     {% if query %}
@@ -32,7 +32,7 @@
         </div>
     {% else %}
         <div class="alert alert-warning mt-3">
-            ❌ No task found with that ID or it’s not assigned to you.
+             No task found with that ID or it’s not assigned to you.
         </div>
     {% endif %}
 </div>
